2008-02-08  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-app.c: actually connect the configure_event signal to its
	function. D'oh!

2008-02-08  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-app.c: Set the main window visibility during start-up from the user's
	gconf value.

2008-02-08  Brian Pepple  <bpepple@fedoraproject.org>

	* data/twitux.schemas.in:
	* src/twitux.h:
	* src/twitux-app.[ch]:
	* src/twitux-hint.[ch]:
	* src/Makefile.am: Instead of quitting application when hitting the 'X'
	on the main window, it will instead minimize to the tray. (#1887777)

2008-02-07  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-preferences.c:
	* src/twitux-tweet-list.c: Add includes and remove some unused crap.

	* src/twitux-parser.c:
	* src/twitux-spell-dialog.c:
	* src/twitux-send-message-dialog.c: Add missing includes.

2008-02-07  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-app.c: Add missing include on twitux-account-dialog.h

	* src/twitux-ui-utils.h: Add missing twitux_window_get_is_visible function
	to header.

	* libtwitux/twitux-keyring.c (account_gnome_keyring_result_to_string):
	Add enumercation for GNOME_KEYRING_RESULT_NO_MATCH to quite compiler.

2008-02-05  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.in:
	* src/twitux-network.c: Update to libsoup-2.4 api
	Patch from Dan Winship.

2008-02-04  Daniel Morales  <daniminas@gmail.com>

	* data/preferences_dialog.glade:
	* data/twitux.schemas.in:
	* src/twitux-parser.c:
	* src/twitux-preferences.c:
	* src/twitux.h: Add preference to show user names ore
	real names

2008-01-19  Daniel Morales  <daniminas@gmail.com>

	* src/twitux-network.c: add 'source' param to get 'from twitux'
	on twitter web.

2008-01-13  Brian Pepple  <bpepple@fedoraproject.org>

	* data/account_dialog.glade:
	* data/main_window.glade:
	* data/send_message_dialog.glade:
	* data/Makefile.am:
	* data/add_friend_dialog.glade:
	* data/spell_dialog.glade:
	* data/preferences_dialog.glade: